# OrtExtensions

./: README.md
ort_custom_pad_unpad/: CMakeLists.txt  onnxruntime.cmake  setup.py  test_py.py
ort_custom_pad_unpad/custom_op_library/: custom_op_library.cc
ort_custom_pad_unpad/custom_op_library/cuda/: cuda_ops.cc
ort_custom_pad_unpad/custom_op_library/torch_op/: ops.cc
ort_custom_pad_unpad/extra_ort_headers/: cuda_context.h
